ajouter des styles pour le sélecteur de langue WPML dans le footer et corriger la sélection du texte du commutateur de langue

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -205,4 +205,13 @@
             box-shadow: none;
         }
     }
+
+    .wpml-ls-legacy-list-vertical.wpml-ls-statics-footer {
+        margin-bottom: 0;
+        a {
+            background-color: transparent;
+            color: #fff;
+            text-transform: uppercase;
+        }
+    }
 }
