modifier le sélecteur de lien dans le footer et mettre à jour le texte du sélecteur de langue

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -208,7 +208,7 @@
 
     .wpml-ls-legacy-list-vertical.wpml-ls-statics-footer {
         margin-bottom: 0;
-        a {
+        a.wpml-ls-link {
             background-color: transparent;
             color: #fff;
             text-transform: uppercase;
