modifier la couleur de fond du lien WPML dans le footer

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -209,7 +209,7 @@
     .wpml-ls-legacy-list-vertical.wpml-ls-statics-footer {
         margin-bottom: 0;
         a.wpml-ls-link {
-            background-color: transparent;
+            background-color: #131327;
             color: #fff;
             text-transform: uppercase;
         }
