--- a/assets/styles/atoms/_badges.scss
+++ b/assets/styles/atoms/_badges.scss
@@ -11,7 +11,7 @@
     padding: var(--8, 0.5rem) var(--16, 1rem);
     text-transform: uppercase;
     &-light {
-        background: var(--Neutral-100_FFFFFF, #fff);
-        color: $color-primary !important;
+        background: $color-primary-lightest;
+        color: $color-primary-darkest !important;
     }
 }
